# Haspin

./: .gitignore  README.md  haspin.cabal
Haspin/Skatox/: Data.hs  Parser.hs
Haspin/Standard/: Data.hs  Logic.hs  StrictParser.hs
PSLanguage/: pslanguage.hs
Standard/: Data.hs  Logic.hs  Strict.hs  StrictParser.hs
test/: Skatox.hs  Standard.hs
